# robobot-project

./: .gitignore  README.md
raubase/src/: bplan_test_move.cpp  main.cpp  task11.h
regbot/: Robobot_checklist.odt
regbot/.svn/: wc.db
regbot/WB_proj/socket_server_test/: CMakeLists.txt  main.cpp  ulock.h  ulogfile.cpp  ulogfile.h  umsgqueue.h  userverport.h  userverqueue.cpp  userverqueue.h  utime.cpp
regbot/WB_proj/socket_server_test/.kdev4/: socket_server_test.kdev4
regbot/bom/: Component-labels.odg  plastic.ods  regbot_version_2_budget.ods  screws.ods
regbot/bridge/: bridge.ini
regbot/bridge_old_not_to_be_used/: ubridge.cpp  userverclient.cpp  userverport.cpp
regbot/doc/: blockdiagram_controller.odg  blockdiagram_dataflow.odg  genstartvejledning.odt  labels_coordinate.odt  labels_navne.odb
regbot/frame/: LS_LED-shade-15deg.fcstd  LS_LED-shade.fcstd  bat_volt_mount.stl  bat_volt_mount_1.stl  battery-charger-mount.fcstd  battery-charger-mount.stl  battery-charger-mount_rev3.fcstd  battery-charger-mount_rev3.stl  big-servo-mount.stl  encoder-mount.stl  encoder_magnet_mount.stl  front-wheel-mount.stl  front-wheel-servo-mount.fcstd  front-wheel-servo-mount.stl  front-wheel-servo-mount_savox.stl  ir-sensor-mount.fcstd  ir-sensor-mount.stl  kit-frame-lasercut.fcstd  labels.odg  laser-side-plate5-1.dwg  robot_test_sheet.odt  servo_arm_main.stl
regbot/maple/: bal_v4.mw  linesensor-detector.mw  low_speed_calc.mw  mekanikmodel_PD_limits.mw  mekanikmodel_PID_limits.mw  polynomie-ulighed.mw  udregning_af_s_to_z_PI.mw  udregning_af_s_to_z_complex_lead_PI.mw  (+1 more)
(+556 files in other folders)
